--- a/src/main/resources/templates/create/create_pet.html
+++ b/src/main/resources/templates/create/create_pet.html
@@ -14,7 +14,7 @@
 
     <form th:action="@{/create/pet}" method="POST" class="uk-margin-auto uk-width-1-3 " th:object="${pet}">
         <h1 class="uk-margin-top">Create a New Pet</h1>
-        <div class="uk-margin">
+        <div class="uk-margin uk-text-center uk-text-left@s">
             <label for="breed">Breed</label>
             <input id="breed" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" th:field="*{breed}" />
         </div>
