--- a/src/main/resources/templates/edit_pages/editProgram.html
+++ b/src/main/resources/templates/edit_pages/editProgram.html
@@ -2,8 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="partials :: head('Edit Program')"/>
 <body>
-<nav th:replace="partials::navbar"/>
-<div class="container uk-flex">
+<div class="container uk-margin-bottom">
+    <nav th:replace="partials :: navbar"/>
+</div>
+<div class="uk-container uk-flex">
 
     <form th:action="@{/editProgram}" method="POST" class="uk-margin-auto uk-width-1-2 " th:object="${program}">
         <h1 class="uk-margin-top">Edit your Program</h1>
@@ -37,6 +39,8 @@
     </form>
 </div>
 
+<div th:replace="partials :: footer" />
+<div th:replace="partials :: scripts" />
 
 </body>
 </html>
