--- a/src/main/resources/templates/views/shelter_view.html
+++ b/src/main/resources/templates/views/shelter_view.html
@@ -15,7 +15,7 @@
     </div>
 
 
-    <div class="uk-child-width-1-2 uk-grid uk-padding">
+    <div class="uk-child-width-1-1 uk-child-width-1-2@l uk-grid uk-padding" uk-grid="masonry:true">
 
         <div class="uk-width-1-2@m">
             <h3> Pets Available </h3>
