navbar spacing adjusted

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -38,8 +38,8 @@
                 <li sec:authorize="!isAuthenticated()" class="uk-visible@s">
                     <a class="nav-link" href="/sign-up" style="color: black"><img class="uk-margin-small-right" src="https://img.icons8.com/material/24/000000/add-user-male.png" />Register</a>
                 </li>
-                <li class="uk-visible@s"><a class="nav-link" style="color: black" href="/home"><img src="https://img.icons8.com/material/24/000000/home-page.png" />Home</a></li>
-                <li class="uk-visible@s"><a href="/adopter/pets" style="color: black"><img src="https://img.icons8.com/material/24/000000/search.png" />View all pets</a></li>
+                <li class="uk-visible@s"><a class="nav-link" style="color: black" href="/home"><img class="uk-margin-small-left" src="https://img.icons8.com/material/24/000000/home-page.png" />Home</a></li>
+                <li class="uk-visible@s"><a href="/adopter/pets" style="color: black"><img class="uk-margin-small-left" src="https://img.icons8.com/material/24/000000/search.png" />View all pets</a></li>
             </ul>
         </div></div>
         <img th:src="@{/img/cat_corner.png}" class="nav_img"/>
